kubernetes/policies/ingress/default-deny.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: frontend 
  name: default-deny-frontend
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress: []
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: backend 
  name: default-deny-backend
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress: []
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: pci 
  name: default-deny-pci
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress: []
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: infrastructure 
  name: default-deny-infrastructure
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress: []
