kubernetes/policies/ingress/queue-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: infrastructure
  name: queue-access-policy
spec:
  podSelector:
    matchLabels:
      app: queue
  policyTypes:
  - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              requires: queue
      ports:
        - protocol: TCP
          port: 5000
